--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(SOURCES
+    njs/gc/GCHeap.cpp
+    njs/gc/GCObject.cpp
+    njs/main.cpp
+)
+
 # 添加可执行文件
-add_executable(njs njs/main.cpp)
+add_executable(njs ${SOURCES})
 
 target_compile_options(njs PRIVATE -Wno-deprecated-declarations)
 target_include_directories(njs PRIVATE .)
