--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(SOURCES
-    njs/gc/GCHeap.cpp
-    njs/gc/GCObject.cpp
+    njs/basic_types/JSObject.cpp
+    njs/basic_types/JSValue.cpp
     njs/main.cpp
 )
 
