Add codegen related code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 
 project(njs LANGUAGES CXX)
 
-# 设置 C++ 标准
+# C++ Standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -13,7 +13,7 @@ set(SOURCES
     njs/main.cpp
 )
 
-# 添加可执行文件
+# executable is named `njs`
 add_executable(njs ${SOURCES})
 
 target_compile_options(njs PRIVATE -Wno-deprecated-declarations)
