--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ set(SOURCES
     njs/basic_types/JSArray.cpp
     njs/vm/NativeFunction.cpp
     njs/vm/JSRunLoop.cpp
+    njs/basic_types/JSObjectPrototype.cpp
+    njs/basic_types/JSArrayPrototype.cpp
 )
 
 # executable is named `njs`
